# eclipse-chess-engine

./: .gitignore  .gitmodules  ACKNOWLEDGEMENTS.md  CMakeLists.txt  DEVELOPMENT.md  KAGGLE.md  README.md  RELEASE_CHECKLIST.md  SETUP.md
.github/workflows/: lichess-readme.yml
data/: blindspot_g10.epd  lc0_policy_map.txt  selfplay_halfkav2_15s.pgn  selfplay_halfkav2_5s.pgn
dev/: DEVELOPMENT.md  KAGGLE.md  PRODUCTION_TESTING.md  README.md  RELEASE_CHECKLIST.md  net2widernet.md
dev/notebooks/: eclipse_wdl_train.ipynb
dev/scripts/: bench_nnue_greedy.py  bot_pause_watcher.py  combine_and_upload_eval.py  combine_and_upload_wdl.py  convert_halfkav2_nnue.py  engine_diag.sh  eval_fen.sh  extract_lichess_evals.py  gen_lichess_card.py  launch_2026_2024.sh  launch_extractions.sh  match_runner.py  run_match.sh  run_month_eval.sh  sample_lichess.py  self_play.py  sprt_run.sh  test_cp_scale.py  test_qat.py
notebooks/: eclipse_wdl_train.ipynb  kernel-metadata.json
scripts/: analyze_accuracy.py  auto_launch_eval.sh  bench_1000_1800.py  bench_h2h_tc.py  bench_nnue_greedy.py  bench_vs_stockfish.py  bot_pause_watcher.py  combine_and_upload_eval.py  combine_and_upload_wdl.py  convert_halfkav2_nnue.py  convert_halfkp_nnue.py  deploy.sh  extract_lichess_evals.py  extract_lichess_wdl.py  fetch_latest_net.sh  label_with_stockfish.py  launch_eval.sh  match_depth.py  match_runner.py  match_score.py  pause_bot_after_game.py  pgn_to_training.py  pgo_build.sh  play_human.py  ponderhit_stats.sh  preprocess_halfkav2.py  run_benchmark.py  run_match.sh  run_month.sh  self_play.py  test_selfplay_data.py  train_halfkav2.py  train_halfkp.py
src/: CMakeLists.txt  ab.cpp  ab.hpp  accumulator.hpp  attacks.cpp  attacks.hpp  bitboard.cpp  bitboard.hpp  eval.cpp  eval.hpp  main.cpp  mcts.cpp  mcts.hpp  move.cpp  move.hpp  movegen.cpp  movegen.hpp  nnue.cpp  nnue.hpp  perft.cpp  perft.hpp  policy.cpp  policy.hpp  position.cpp  position.hpp  search.cpp  search.hpp  see.cpp  see.hpp  syzygy.cpp  syzygy.hpp  thread_util.hpp  tt.cpp  tt.hpp  types.hpp  uci.cpp  uci.hpp  zobrist.cpp  zobrist.hpp
tests/: CMakeLists.txt  check.hpp  nnue_eval_server.cpp  tactic_trace_tool.cpp  test_attacks.cpp  test_bitboard.cpp  test_eval_comparison.cpp  test_makemove.cpp  test_movegen_captures.cpp  test_nnue.cpp  test_nnue_batch.cpp  test_perft.cpp  test_position.cpp  test_search.cpp  test_syzygy.cpp  test_time_management.cpp  test_types.cpp
