function(eclipse_add_test name)
    add_executable(${name} ${name}.cpp)
    target_link_libraries(${name}
        PRIVATE eclipse_core eclipse_warnings)
    target_include_directories(${name} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
    add_test(NAME ${name} COMMAND ${name})
endfunction()

add_executable(nnue_eval_server nnue_eval_server.cpp)
target_link_libraries(nnue_eval_server PRIVATE eclipse_core)
target_include_directories(nnue_eval_server PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})

add_executable(tactic_trace_tool tactic_trace_tool.cpp)
target_link_libraries(tactic_trace_tool PRIVATE eclipse_core)
target_include_directories(tactic_trace_tool PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})

eclipse_add_test(test_types)
eclipse_add_test(test_bitboard)
eclipse_add_test(test_attacks)
eclipse_add_test(test_position)
eclipse_add_test(test_perft)
eclipse_add_test(test_movegen_captures)
eclipse_add_test(test_search)
eclipse_add_test(test_makemove)
eclipse_add_test(test_time_management)
eclipse_add_test(test_syzygy)
eclipse_add_test(test_nnue)
eclipse_add_test(test_nnue_batch)
eclipse_add_test(test_eval_comparison)
